# snaplet-rest

./: README.md  snaplet-rest-resources.cabal  snaplet-rest.cabal
src/Snap/Snaplet/: Resource.hs  Rest.hs
src/Snap/Snaplet/Resource/: Config.hs  Diff.hs  Failure.hs  Media.hs  Options.hs  Path.hs  Proxy.hs  Rep.hs  Stored.hs
src/Snap/Snaplet/Rest/: Config.hs  Diff.hs  Failure.hs  FromRequest.hs  Media.hs  Options.hs  Path.hs  Proxy.hs  Resource.hs  Serve.hs
src/Snap/Snaplet/Rest/Diff/: Internal.hs
src/Snap/Snaplet/Rest/FromRequest/: Internal.hs
src/Snap/Snaplet/Rest/Resource/: Builder.hs  Internal.hs  Media.hs
