name:          snaplet-rest-resources
version:       0.1.0
homepage:      http://github.com/zimothy/snaplet-rest-resources
license:       MIT
license-file:  LICENSE
author:        Timothy Jones
maintainer:    Timothy Jones <git@zimothy.com>
copyright:     (c) 2013 Timothy Jones
category:      Web
build-type:    Simple
cabal-version: >=1.10
synopsis:      Provides explicit REST resources for the Snap web framework
description:

flag development
  description: Warnings are not considered errors
  default:     False

library
  hs-source-dirs: src

  if flag(development)
    ghc-options: -Wall
  else
    ghc-options: -Wall -Werror

  default-language: Haskell2010
  default-extensions:
    OverloadedStrings

  exposed-modules:
    Snap.Snaplet.Example
    Snap.Snaplet.Resource
    Snap.Snaplet.Resource.Config
    Snap.Snaplet.Resource.Media

  build-depends:
    aeson            >= 0.6.2  && < 0.7,
    base             >= 4.6.0  && < 4.7,
    bytestring       >= 0.10.0 && < 0.11,
    http-quality     >= 0.2.0  && < 0.3,
    snap-accept      >= 0.1.0  && < 0.2,
    snap-core        >= 0.9.4  && < 0.10,
    template-haskell >= 2.8.0  && < 2.9

source-repository head
  type:     git
  location: git://github.com/zimothy/snaplet-rest-resources.git

