name:          snaplet-rest-resources
version:       0.1.0
homepage:      http://github.com/zimothy/snaplet-rest-resources
license:       MIT
license-file:  LICENSE
author:        Timothy Jones
maintainer:    Timothy Jones <git@zimothy.com>
copyright:     (c) 2013 Timothy Jones
category:      Web
build-type:    Simple
cabal-version: >=1.10
synopsis:      REST resources for the Snap web framework
description:
  Provides explicit REST resources for the Snap web framework.

library
  hs-source-dirs: src

  ghc-options: -Wall

  default-language: Haskell2010
  default-extensions:
    MultiParamTypeClasses
    TypeSynonymInstances
    OverloadedStrings
  other-extensions:
    FlexibleInstances
    FunctionalDependencies
    RankNTypes
    ScopedTypeVariables

  exposed-modules:
    Snap.Snaplet.Resource
    Snap.Snaplet.Resource.Config
    Snap.Snaplet.Resource.Diff
    Snap.Snaplet.Resource.Media
    Snap.Snaplet.Resource.Path
    Snap.Snaplet.Resource.Proxy
    Snap.Snaplet.Resource.Stored
  other-modules:
    Snap.Snaplet.Resource.Failure
    Snap.Snaplet.Resource.Options

  build-depends:
    aeson            >= 0.6.2  && < 0.7,
    base             >= 4.6.0  && < 4.7,
    bytestring       >= 0.10.0 && < 0.11,
    case-insensitive >= 1.0.0  && < 1.1,
    http-media       >= 0.1.0  && < 0.2,
    mtl              >= 2.1.2  && < 2.2,
    snap             >= 0.13.0 && < 0.14,
    snap-accept      >= 0.1.0  && < 0.2,
    snap-core        >= 0.9.4  && < 0.10,
    text             >= 0.11.3 && < 0.12,
    utf8-string      >= 0.3.7  && < 0.4

source-repository head
  type:     git
  location: git://github.com/zimothy/snaplet-rest-resources.git

