name:          snaplet-rest
version:       0.1.0
homepage:      http://github.com/zimothy/snaplet-rest
license:       MIT
license-file:  LICENSE
author:        Timothy Jones
maintainer:    Timothy Jones <git@zimothy.com>
copyright:     (c) 2013 Timothy Jones
category:      Web
build-type:    Simple
cabal-version: >=1.10
synopsis:      REST resources for the Snap web framework
description:
  Provides explicit REST resources for the Snap web framework.

library
  hs-source-dirs: src

  ghc-options: -Wall

  default-language: Haskell2010
  default-extensions:
    MultiParamTypeClasses
    OverloadedStrings
  other-extensions:
    FlexibleInstances
    IncoherentInstances
    OverlappingInstances
    Rank2Types
    TupleSections

  exposed-modules:
    Snap.Snaplet.Rest
    Snap.Snaplet.Rest.Config
    Snap.Snaplet.Rest.FromRequest
    Snap.Snaplet.Rest.Resource
  other-modules:
    Snap.Snaplet.Rest.Failure
    Snap.Snaplet.Rest.FromRequest.Internal
    Snap.Snaplet.Rest.Media
    Snap.Snaplet.Rest.Options
    Snap.Snaplet.Rest.Proxy
    Snap.Snaplet.Rest.Resource.Builder
    Snap.Snaplet.Rest.Resource.Internal
    Snap.Snaplet.Rest.Resource.Media
    Snap.Snaplet.Rest.Serve

  build-depends:
    aeson                >= 0.6.2  && < 0.7,
    base                 >= 4.6.0  && < 4.7,
    blaze-builder        >= 0.3.1  && < 0.4,
    bytestring           >= 0.10.0 && < 0.11,
    case-insensitive     >= 1.0.0  && < 1.1,
    http-media           >= 0.1.0  && < 0.2,
    lens                 >= 3.9.0  && < 3.10,
    mtl                  >= 2.1.2  && < 2.2,
    snap                 >= 0.13.0 && < 0.14,
    snap-accept          >= 0.1.0  && < 0.2,
    snap-core            >= 0.9.4  && < 0.10,
    text                 >= 0.11.3 && < 0.12,
    unordered-containers >= 0.2.3  && < 0.3,
    utf8-string          >= 0.3.7  && < 0.4,
    xmlhtml              >= 0.2.3  && < 0.3

source-repository head
  type:     git
  location: git://github.com/zimothy/snaplet-rest.git

